fix baseline alignment

--- a/production/src/modules/components/scss/HomeScreenConfigEditor.scss
+++ b/production/src/modules/components/scss/HomeScreenConfigEditor.scss
@@ -20,7 +20,7 @@
                     background-color: #e6e7e7;
 
                     .ant-tabs-tab {
-                        padding: 8px 15px;
+                        padding: 8px 15px !important;
                         font-size: 12px;
                         text-align: left;
                         color: #29313b;
