--- a/production/src/modules/components/scss/HomeScreenGeneral.scss
+++ b/production/src/modules/components/scss/HomeScreenGeneral.scss
@@ -28,8 +28,8 @@
             padding-right: 50px;
             margin-bottom: 15px;
             .ant-input {
-                padding-left: 5px;
-                padding-right: 5px;
+                padding-left: 5px !important;
+                padding-right: 5px !important;
             }
             
         }
