--- a/production/src/modules/components/scss/HomeScreenMoreSetting.scss
+++ b/production/src/modules/components/scss/HomeScreenMoreSetting.scss
@@ -66,7 +66,7 @@
 .ant-input-affix-wrapper {
     font-family: $font-family;
     display: inline-flex;
-    padding: 0;
+    padding: 0 !important;
     margin: 0;
     align-content: center;
 
